#884 - focus collection input if theres a value. fix collection search on mobile

--- a/frontend/scss/molecules/_m-search-bar.scss
+++ b/frontend/scss/molecules/_m-search-bar.scss
@@ -224,6 +224,7 @@
   display: block;
 }
 
+.m-search-bar.s-loading .m-search-bar__clear,
 .m-search-bar.s-loading .m-search-bar__autocomplete-close {
   display: none;
 }
